@@ -11,6 +11,7 @@ Codename: "www.supersyntages.gr"
 - Fixed bug #396124, GBC different in Pajek cp. to SocNetV
 - Fixed bug #415277 network files were not loaded on startup
 - Fixed a bug #379225 side note: GraphML format did not preserve node labels.
+- Fixed bug #418023: rewiring parameter typo in Graph::createRandomNetSmallWorld.
 - Edited .spec to enable proper Fedora package creation.
 - Changed ProgressBar behaviour: bars appear only if nodes are more than 300
 - New feature: the embedded text editor can be used to copy/paste directly network data
